Atualizar o index.html
correção de texto

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h1>SOBRE MIM</h1> 
             </div>
             <div class="div2">
-                <p>Olá eu sou o Fabrício tenho 21 anos e moro em Ferraz de Vasconcelos, desde pequeno tive facilidade em lógica num geral e sempre tive o desejo de entrar na área de TI, quando me formei no ensino médio encontrei a área de desenvolvimento que é onde estou até hoje, me apaixonei pela área pois ela é essência para nosso dias atuais além dela envolver a lógica de uma forma única e consistente.</p>
+                <p>Olá eu sou o Fabrício tenho 21 anos e moro em Ferraz de Vasconcelos, desde pequeno tive facilidade em lógica num geral e sempre tive o desejo de entrar na área de TI, quando me formei no ensino médio encontrei a área de desenvolvimento que é onde estou até hoje, me apaixonei pela área pois ela é essência para nossos dias atuais além dela envolver a lógica de uma forma única e consistente.</p>
             </div>
             <div class="div3">
                 <h1>OBJETIVO PROFISSIONAL</h1> 
