Atualizar o index.html
outra correção na parte superior do código

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h1>OBJETIVO PROFISSIONAL</h1> 
             </div>
             <div class="div4">
-                <p >Minha carreira profissional está no início, mas estou em busca de uma oportunidade na área de desenvolvimento web para demonstrar meu talento e minhas habilidades. Acredito que posso suprir a falta de experiência com dedicação e empenho em estudos e praticando.</p>
+                <p >Minha carreira profissional está no início, mas estou em busca de uma oportunidade na área de desenvolvimento web para demonstrar meu talento e minhas habilidades. Acredito que posso suprir a falta de experiência com dedicação, empenho em estudos e praticando.</p>
             </div>
             <div class="div5">
                 <h1>MEUS HOBBIES</h1>
