Atualizar o index.html
atualização link LinkedIn

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="https://github.com/Fabricio-P-Viana"><img src="./assets/src/github.png" ></a>
                 </div>
                 <div class="links-caixas">
-                    <a href="https://www.instagram.com/fabriciopviana/"><img src="./assets/src/linkedin.png" ></a>
+                    <a href="https://www.linkedin.com/in/fabr%C3%ADcio-pereira-viana-950377203/"><img src="./assets/src/linkedin.png" ></a>
                 </div>
                 <div class="links-caixas">
                     <a href="contato.html#mail"><img src="./assets/src/o-email.png"></a>
