--- a/contato.html
+++ b/contato.html
@@ -52,7 +52,7 @@
     </div>
     </section>
     <section class="mail" id="mail">
-        <form action="https://formsubmit.co/fafafabriciopereira4@gmail.com" method="POST">
+        <form action="https://formsubmit.co/e8e90c63b5c9ed59aa634d73956ab254" method="POST">
             <div class="parentEmail">
             <input type="hidden" name="_next" value="https://fabricio-p-viana.github.io/meuPortifolio/obrigado.html#obrigado">
             <div class="div1">
