desabilitando envio de email
envio de email esta fora do ar

--- a/contato.html
+++ b/contato.html
@@ -65,7 +65,8 @@
                 <textarea type="text" id="message" name="message" required></textarea>
             </div>
             <div class="div3">
-                <button type="submit">ENVIAR</button>
+                <h2>Infelizmente o sistema de email está fora do ar! tente contato por outras opções!</h2>
+                <button type="submit" disabled>ENVIAR</button>
             </div>
             </form>
         </div>
