Update index.html link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="index.html#Sobre-mim" style="--i:1">Sobre Mim</a>
             <a href="index.html#Tecnologias" style="--i:2">Tecnologias</a>
             <a href="index.html#Projetos" style="--i:3">Projetos</a>
-            <a href="contato.html#mail" style="--i:4">Contato</a>
+            <a href="index.html#Contato" style="--i:4">Contato</a>
         </nav>
     </header>
 
