--- a/contato.html
+++ b/contato.html
@@ -65,7 +65,7 @@
                 <textarea type="text" id="message" name="message" required></textarea>
             </div>
             <div class="div3">
-                <h2>Infelizmente o sistema de email está fora do ar! tente contato por outras opções!</h2>
+                <h2>Infelizmente o sistema de email está fora do ar! tente contato por este email: fabriciopviana@outlook.com</h2>
                 <button type="submit" disabled>ENVIAR</button>
             </div>
             </form>
