--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
                 <ul>
                     <li>Para envios de testes utilizei o insomnia um framework open source para desenvolvimento;</li>
                     <li>O backend foi implementado a RESTful API com base em node.js, Express.js e MongoDB;</li>
-                    <li>Neste momento estou desenvolvendo os Gets da aplicação.</li>
+                    <li>Rotas criadas e Sistema de Segurança para Rotas mais sensíveis como cadastro e exclusão.</li>
+                    <li>Testes feitos com Insomnia, todas as requisições funcionando perfeitamente.</li>
                 </ul>
             </div>
             <div class="div6">
@@ -242,7 +243,7 @@
                 <ul>
                     <li>Criação da documentação completa com mais de 10 Casos de uso (UML);</li>
                     <li>Modelagem de banco de dados, seguindo padrões de normaliza;</li>
-                    <li>Prototipação Web utilizando HTML e CSS;</li>
+                    <li>Prototipação Web utilizando HTML e CSS, foi utilizado SCRUM para o desenvolvimento ágil;</li>
                     <li>Neste primeiro semestre de 2024, se inicia o desenvolvimento baseado em toda a documentação.</li>
                 </ul>
             </div>
