atualização sobre projetos
projeto da Lancho.net foi atualizada

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <li>Criação da documentação completa com mais de 10 Casos de uso (UML);</li>
                     <li>Modelagem de banco de dados, seguindo padrões de normaliza;</li>
                     <li>Prototipação Web utilizando HTML e CSS, foi utilizado SCRUM para o desenvolvimento ágil;</li>
-                    <li>Neste primeiro semestre de 2024, se inicia o desenvolvimento baseado em toda a documentação.</li>
+                    <li>No primeiro semestre de 2024, foi desenvolvido todo o sistema baseado na documentação.</li>
                 </ul>
             </div>
             <div class="div17 imagens">
